@@ -65,16 +65,117 @@
 #include <errno.h>    /* errno, EOVERFLOW */
 #include <glib.h>     /* g* types, g_assert_not_reached() */
 
+#ifdef HAVE_INTTYPES_H
+#include <inttypes.h>
+#endif /* ndef HAVE_INTTYPES_H */
+
+#if defined (G_MININT8)
+#define CNM_MININT8 G_MININT8
+#elif defined (INT8_MIN)
+#define CNM_MININT8 INT8_MIN
+#else
+#define CNM_MININT8 (-128)
+#endif
+
+#if defined (G_MAXINT8)
+#define CNM_MAXINT8 G_MAXINT8
+#elif defined (INT8_MAX)
+#define CNM_MAXINT8 INT8_MAX
+#else
+#define CNM_MAXINT8 (127)
+#endif
+
+#if defined (G_MAXUINT8)
+#define CNM_MAXUINT8 G_MAXUINT8
+#elif defined (UINT8_MAX)
+#define CNM_MAXUINT8 UINT8_MAX
+#else
+#define CNM_MAXUINT8 (255)
+#endif
+
+#if defined (G_MININT16)
+#define CNM_MININT16 G_MININT16
+#elif defined (INT16_MIN)
+#define CNM_MININT16 INT16_MIN
+#else
+#define CNM_MININT16 (-32768)
+#endif
+
+#if defined (G_MAXINT16)
+#define CNM_MAXINT16 G_MAXINT16
+#elif defined (INT16_MAX)
+#define CNM_MAXINT16 INT16_MAX
+#else
+#define CNM_MAXINT16 (32767)
+#endif
+
+#if defined (G_MAXUINT16)
+#define CNM_MAXUINT16 G_MAXUINT16
+#elif defined (UINT16_MAX)
+#define CNM_MAXUINT16 UINT16_MAX
+#else
+#define CNM_MAXUINT16 (65535)
+#endif
+
+#if defined (G_MININT32)
+#define CNM_MININT32 G_MININT32
+#elif defined (INT32_MIN)
+#define CNM_MININT32 INT32_MIN
+#else
+#define CNM_MININT32 (-2147483648)
+#endif
+
+#if defined (G_MAXINT32)
+#define CNM_MAXINT32 G_MAXINT32
+#elif defined (INT32_MAX)
+#define CNM_MAXINT32 INT32_MAX
+#else
+#define CNM_MAXINT32 (2147483647)
+#endif
+
+#if defined (G_MAXUINT32)
+#define CNM_MAXUINT32 G_MAXUINT32
+#elif defined (UINT32_MAX)
+#define CNM_MAXUINT32 UINT32_MAX
+#else
+#define CNM_MAXUINT32 (4294967295U)
+#endif
+
+#if defined (G_MININT64)
+#define CNM_MININT64 G_MININT64
+#elif defined (INT64_MIN)
+#define CNM_MININT64 INT64_MIN
+#else
+#define CNM_MININT64 (-9223372036854775808LL)
+#endif
+
+#if defined (G_MAXINT64)
+#define CNM_MAXINT64 G_MAXINT64
+#elif defined (INT64_MAX)
+#define CNM_MAXINT64 INT64_MAX
+#else
+#define CNM_MAXINT64 (9223372036854775807LL)
+#endif
+
+#if defined (G_MAXUINT64)
+#define CNM_MAXUINT64 G_MAXUINT64
+#elif defined (UINT64_MAX)
+#define CNM_MAXUINT64 UINT64_MAX
+#else
+#define CNM_MAXUINT64 (18446744073709551615ULL)
+#endif
+
+
 /* returns TRUE if @type is an unsigned type */
 #define _cnm_integral_type_is_unsigned(type) \
     (sizeof(type) == sizeof(gint8)           \
-      ? (((type)-1) > G_MAXINT8)             \
+      ? (((type)-1) > CNM_MAXINT8)             \
       : sizeof(type) == sizeof(gint16)       \
-        ? (((type)-1) > G_MAXINT16)          \
+        ? (((type)-1) > CNM_MAXINT16)          \
         : sizeof(type) == sizeof(gint32)     \
-          ? (((type)-1) > G_MAXINT32)        \
+          ? (((type)-1) > CNM_MAXINT32)        \
           : sizeof(type) == sizeof(gint64)   \
-            ? (((type)-1) > G_MAXINT64)      \
+            ? (((type)-1) > CNM_MAXINT64)      \
             : (g_assert_not_reached (), 0))
 
 /* returns the minimum value of @type as a gint64 */
@@ -82,35 +183,35 @@
     (_cnm_integral_type_is_unsigned (type)    \
       ? 0                                     \
       : sizeof(type) == sizeof(gint8)         \
-        ? G_MININT8                           \
+        ? CNM_MININT8                           \
         : sizeof(type) == sizeof(gint16)      \
-          ? G_MININT16                        \
+          ? CNM_MININT16                        \
           : sizeof(type) == sizeof(gint32)    \
-            ? G_MININT32                      \
+            ? CNM_MININT32                      \
             : sizeof(type) == sizeof(gint64)  \
-              ? G_MININT64                    \
+              ? CNM_MININT64                    \
               : (g_assert_not_reached (), 0))
 
 /* returns the maximum value of @type as a guint64 */
 #define _cnm_integral_type_max(type)            \
     (_cnm_integral_type_is_unsigned (type)      \
       ? sizeof(type) == sizeof(gint8)           \
-        ? G_MAXUINT8                            \
+        ? CNM_MAXUINT8                            \
         : sizeof(type) == sizeof(gint16)        \
-          ? G_MAXUINT16                         \
+          ? CNM_MAXUINT16                         \
           : sizeof(type) == sizeof(gint32)      \
-            ? G_MAXUINT32                       \
+            ? CNM_MAXUINT32                       \
             : sizeof(type) == sizeof(gint64)    \
-              ? G_MAXUINT64                     \
+              ? CNM_MAXUINT64                     \
               : (g_assert_not_reached (), 0)    \
       : sizeof(type) == sizeof(gint8)           \
-          ? G_MAXINT8                           \
+          ? CNM_MAXINT8                           \
           : sizeof(type) == sizeof(gint16)      \
-            ? G_MAXINT16                        \
+            ? CNM_MAXINT16                        \
             : sizeof(type) == sizeof(gint32)    \
-              ? G_MAXINT32                      \
+              ? CNM_MAXINT32                      \
               : sizeof(type) == sizeof(gint64)  \
-                ? G_MAXINT64                    \
+                ? CNM_MAXINT64                    \
                 : (g_assert_not_reached (), 0))
 
 #ifdef DEBUG
